--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Pedro Paião <devpedropaiao@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "start": "ts-node-dev src/server.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
@@ -14,6 +15,9 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.8.0"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
