--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.8.0"
+    "sequelize": "^6.8.0",
+    "ts-node": "^10.4.0"
   },
   "engines": {
     "node": "16.x"
