--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,6 @@
     // "disableSourceOfProjectReferenceRedirect": true,  /* Disable preferring source files instead of declaration files when referencing composite projects */
     // "disableSolutionSearching": true,                 /* Opt a project out of multi-project reference checking when editing. */
     // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
-
     /* Language and Environment */
     "target": "es2017",
     "lib": [
@@ -99,5 +98,15 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "scripts": {
+    "start": "ts-node src/config/server.ts",
+    "dev": "nodemon -x ts-node src/config/server.ts"
+  },
+  "include" : [
+    "src/**/*.ts"   /* Include every ts file in source folder */
+  ],
+  "exclude" : [
+      "node_modules"  /* exclude everything in  node_modules */
+  ],
 }
