--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/express": "^4.17.13",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-serializer": "^1.0.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.8.0"
