--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node src/server.ts",
-    "start": "ts-node src/server.ts"
+    "start": "ts-node src/server.ts",
+    "populate": "ts-node src/tasks/populate.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
