--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
     "express-serializer": "^1.0.1",
     "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
+    "node-localstorage": "^2.2.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.8.0",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "16.x"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
+    "@types/node-localstorage": "^1.3.0",
+    "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.14",
     "sequelize-cli": "^6.2.0",
     "ts-node-dev": "^1.1.8",
